chore: Add a package.json

--- a/template/package.json
+++ b/template/package.json
@@ -21,6 +21,7 @@
     "@react-native/eslint-config": "0.74.0",
     "@react-native/metro-config": "0.74.0",
     "@react-native/typescript-config": "0.74.0",
+    "@react-native-community/cli": "latest",
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
