--- a/template/package.json
+++ b/template/package.json
@@ -1,6 +1,6 @@
 {
   "name": "HelloWorld",
-  "version": "0.0.1",
+  "version": "0.75.0-rc.0",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
@@ -17,10 +17,10 @@
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
-    "@react-native/babel-preset": "0.75.0-main",
-    "@react-native/eslint-config": "0.75.0-main",
-    "@react-native/metro-config": "0.75.0-main",
-    "@react-native/typescript-config": "0.75.0-main",
+    "@react-native/babel-preset": "0.75.0-rc.0",
+    "@react-native/eslint-config": "0.75.0-rc.0",
+    "@react-native/metro-config": "0.75.0-rc.0",
+    "@react-native/typescript-config": "0.75.0-rc.0",
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
