Safeguard dist-tag of -stable

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -39,6 +39,8 @@ jobs:
           if [[ "$VERSION" == *"rc"* ]]; then
             npm dist-tag add @react-native-community/template@$VERSION next
           fi
-          npm dist-tag add @react-native-community/template@$VERSION $GITHUB_REF_NAME
+          if [[ "$GITHUB_REF_NAME" == *"-stable" ]]; then
+            npm dist-tag add @react-native-community/template@$VERSION $GITHUB_REF_NAME
+          fi
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
