--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
   "name": "@react-native-community/template",
-  "version": "0.75.0-rc.0",
+  "version": "0.0.5",
   "description": "The template used by `npx @react-native-community/cli init` to bootstrap a React Native application.",
   "license": "MIT",
-  "type": "module",
   "publishConfig": {
     "access": "public"
   },
