--- a/.github/workflows/nightly.yaml
+++ b/.github/workflows/nightly.yaml
@@ -21,7 +21,9 @@ jobs:
           node-version: 18
           registry-url: 'https://registry.npmjs.org'
       - name: Update versions to nightly
-        run: node updateTemplateVersion.js nightly
+        run: node ./scripts/updateTemplateVersion.js nightly
+      - name: Update template/package.json to nightly react-native + @react-native
+        run: node ./scripts/updateReactNativeVersion.js nightly
       - name: Publish NPM as Nightly
         run: npm publish --tag nightly
         env:
