fix: commonjs version script + prettier + tag react-version
1. updateReactNativeVersion -> CommonJS
2. use prettier to clean up formatting
3. add the react-native version associated with the specific release of
   this template in the script.version field. This is accessible from
   the registry.npmjs.org API. This is going to be useful in the future
   and costs nothing to do now.
4. ran `npm pkg fix`

--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "publishConfig": {
     "access": "public"
   },
+  "scripts": {},
+  "type": "commonjs",
   "files": [
     "template/*",
     "template.config.js"
@@ -15,6 +17,6 @@
   "homepage": "https://github.com/react-native-community/template/tree/main",
   "repository": {
     "type": "git",
-    "url": "https://github.com/react-native-community/template.git"
+    "url": "git+https://github.com/react-native-community/template.git"
   }
 }
