--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -36,11 +36,12 @@ jobs:
         run: node ./scripts/updateReactNativeVersion.js "${{ inputs.version }}"
       - name: Create corresponding commit & git tag
         run: |
+          VERSION="${{ inputs.version }}"
           git config --global user.name 'React Native Bot'
           git config --global user.email 'bot@reactnative.dev'
-          git commit -am "Bumping template to ${{ input.version }}"
+          git commit -am "Bumping template to $VERSION"
           git push
-          git tag "${{ input.version }}"
+          git tag $VERSION
           git push --tags
       - name: Publish NPM
         run: npm publish
