--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "@react-native-community/template",
-  "version": "0.75.0-rc.1",
+  "version": "0.75.0-rc.1.1",
   "description": "The template used by `npx @react-native-community/cli init` to bootstrap a React Native application.",
   "license": "MIT",
   "publishConfig": {
     "access": "public"
   },
-  "scripts": {},
+  "scripts": {
+    "version": "0.75.0-rc.1"
+  },
   "type": "commonjs",
   "files": [
     "template/*",
