revert: template/package.json version change
Version should stay at 0.0.1 for upgrade-helper

--- a/template/package.json
+++ b/template/package.json
@@ -1,6 +1,6 @@
 {
   "name": "HelloWorld",
-  "version": "0.75.0-rc.0",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
