--- a/template/package.json
+++ b/template/package.json
@@ -17,6 +17,9 @@
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
+    "@react-native-community/cli": "14.0.0-alpha.11",
+    "@react-native-community/cli-platform-android": "14.0.0-alpha.11",
+    "@react-native-community/cli-platform-ios": "14.0.0-alpha.11",
     "@react-native/babel-preset": "0.76.0-main",
     "@react-native/eslint-config": "0.76.0-main",
     "@react-native/metro-config": "0.76.0-main",
