--- a/template/package.json
+++ b/template/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "19.0.0",
-    "react-native": "0.79.6"
+    "react-native": "0.79.6",
+    "@callstack/react-native-visionos": "0.79.6"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -20,6 +21,7 @@
     "@react-native-community/cli": "18.0.0",
     "@react-native-community/cli-platform-android": "18.0.0",
     "@react-native-community/cli-platform-ios": "18.0.0",
+    "@react-native-community/cli-platform-apple": "18.0.0",
     "@react-native/babel-preset": "0.79.6",
     "@react-native/eslint-config": "0.79.6",
     "@react-native/metro-config": "0.79.6",
