feat: create releases where PATCH doesn't have to match react-native
This feature needs to be released with react-native-community/cli#2475,
which decouples the 1:1 release model we have for templates and
react-native.

Switching users to this is going to be difficult, and should only be
rolled asap before 0.76. If we have to release a template fix, then only
users with the latest CLI will be able to use that and subsequent
versions.

I'm not sure of how to clearly communicate that to users.

- Added tests
- Set dry_run to default

--- a/package.json
+++ b/package.json
@@ -6,14 +6,19 @@
   "publishConfig": {
     "access": "public"
   },
-  "scripts": {},
+  "scripts": {
+    "test": "jest"
+  },
   "type": "commonjs",
   "files": [
     "template/*",
     "template.config.js"
   ],
   "dependencies": {},
-  "devDependencies": {},
+  "devDependencies": {
+    "jest": "^29.7.0",
+    "semver": "^7.6.3"
+  },
   "homepage": "https://github.com/react-native-community/template/tree/main",
   "repository": {
     "type": "git",
