--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
     inputs:
       version:
-        description: "The version of the template we want to release. For example 0.75.0-rc.0"
+        description: "The version of the react-native we the template to use in this release. For example 0.75.0-rc.0"
         required: true
         type: string
       is_latest_on_npm:
@@ -12,6 +12,10 @@ on:
         required: true
         type: boolean
         default: false
+      dry_run:
+        description: "Run without making persistent changes to git or npm"
+        type: boolean
+        default: true
 
 jobs:
   publish_template:
@@ -30,35 +34,37 @@ jobs:
         with:
           node-version: 18
           registry-url: 'https://registry.npmjs.org'
+      - name: Determine new template version
+        run: echo "VERSION=$(./scripts/bumpedTemplateVersion.sh \"${{ inputs.version }}\")" >> $GITHUB_ENV
       - name: Update versions to input one
-        run: node ./scripts/updateTemplateVersion.js "${{ inputs.version }}"
+        run: node ./scripts/updateTemplateVersion.js $VERSION
       - name: Update template/package.json to nightly react-native + @react-native
         run: node ./scripts/updateReactNativeVersion.js "${{ inputs.version }}"
       - name: Create corresponding commit & git tag
         run: |
-          VERSION="${{ inputs.version }}"
-          git config --global user.name 'React Native Bot'
-          git config --global user.email 'bot@reactnative.dev'
-          git commit -am "Bumping template to $VERSION"
-          git push
-          git tag $VERSION
-          git push --tags
+          GIT=$([ "${{ inputs.dry_run }}" = "true" ] && "echo git" || "git";
+          $GIT config --global user.name 'React Native Bot'
+          $GIT config --global user.email 'bot@reactnative.dev'
+          $GIT commit -am "Bumping template to $VERSION"
+          $GIT push
+          $GIT tag $VERSION
+          $GIT push --tags
       - name: Publish NPM
         run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
       - name: Set NPM tags
         run: |
-          VERSION="${{ inputs.version }}"
+          NPM=$([ "${{ inputs.dry_run }}" = "true" ] && "echo npm" || "npm";
           IS_LATEST_ON_NPM="${{ inputs.is_latest_on_npm }}"
           if [[ "$IS_LATEST_ON_NPM" == "true" ]]; then
-            npm dist-tag add @react-native-community/template@$VERSION latest
+            $NPM dist-tag add @react-native-community/template@$VERSION latest
           fi
           if [[ "$VERSION" == *"rc"* ]]; then
-            npm dist-tag add @react-native-community/template@$VERSION next
+            $NPM dist-tag add @react-native-community/template@$VERSION next
           fi
           if [[ "$GITHUB_REF_NAME" == *"-stable" ]]; then
-            npm dist-tag add @react-native-community/template@$VERSION $GITHUB_REF_NAME
+            $NPM dist-tag add @react-native-community/template@$VERSION $GITHUB_REF_NAME
           fi
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
