--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "access": "public"
   },
   "scripts": {
-    "version": "0.75.2"
+    "version": "0.75.2",
+    "test": "jest"
   },
   "type": "commonjs",
   "files": [
@@ -15,7 +16,10 @@
     "template.config.js"
   ],
   "dependencies": {},
-  "devDependencies": {},
+  "devDependencies": {
+    "jest": "^29.7.0",
+    "semver": "^7.6.3"
+  },
   "homepage": "https://github.com/react-native-community/template/tree/main",
   "repository": {
     "type": "git",
