--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -1,7 +1,7 @@
 name: Tests
 
 on:
-  pull_requests:
+  pull_request:
   push:
     branches:
       - main
@@ -18,6 +18,6 @@ jobs:
         with:
           node-version: 18
       - name: Run unit tests
-        run: npm test
+        run: npm install && npm test
 
 
