fix: `@react-native/community-cli-plugin` on `@react-native-community/cli-server-api`
See https://github.com/facebook/react-native/issues/47309 for context.

--- a/template/package.json
+++ b/template/package.json
@@ -20,6 +20,7 @@
     "@react-native-community/cli": "15.0.1",
     "@react-native-community/cli-platform-android": "15.0.1",
     "@react-native-community/cli-platform-ios": "15.0.1",
+    "@react-native-community/cli-server-api": "15.0.1",
     "@react-native/babel-preset": "0.78.0-main",
     "@react-native/eslint-config": "0.78.0-main",
     "@react-native/metro-config": "0.78.0-main",
