--- a/template/package.json
+++ b/template/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "19.1.0",
-    "react-native": "1000.0.0"
+    "react-native": "1000.0.0",
+    "@react-native/new-app-screen": "0.80.0-main"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
