--- a/template/android/gradle.properties
+++ b/template/android/gradle.properties
@@ -37,3 +37,7 @@ newArchEnabled=true
 # Use this property to enable or disable the Hermes JS engine.
 # If set to false, you will be using JSC instead.
 hermesEnabled=true
+
+# Use this property to enable edge-to-edge display support.
+# This allows your app to draw behind system bars for an immersive UI.
+edgeToEdgeEnabled=false
