Revert "Restore SafeAreaProvider in App.tsx (#156)"
This reverts commit 8cc558af6a4ebaf50b1d628c32574c6cdec87118.

--- a/template/package.json
+++ b/template/package.json
@@ -12,8 +12,7 @@
   "dependencies": {
     "react": "19.1.0",
     "react-native": "1000.0.0",
-    "@react-native/new-app-screen": "0.82.0-main",
-    "react-native-safe-area-context": "^5.5.2"
+    "@react-native/new-app-screen": "0.82.0-main"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
