--- a/template/package.json
+++ b/template/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "react": "19.1.1",
     "react-native": "1000.0.0",
-    "@react-native/new-app-screen": "0.82.0-main"
+    "@react-native/new-app-screen": "0.82.0-main",
+    "react-native-safe-area-context": "^5.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
