--- a/template/package.json
+++ b/template/package.json
@@ -19,9 +19,9 @@
     "@babel/core": "^7.25.2",
     "@babel/preset-env": "^7.25.3",
     "@babel/runtime": "^7.25.0",
-    "@react-native-community/cli": "20.0.0-alpha.2",
-    "@react-native-community/cli-platform-android": "20.0.0-alpha.2",
-    "@react-native-community/cli-platform-ios": "20.0.0-alpha.2",
+    "@react-native-community/cli": "20.0.0",
+    "@react-native-community/cli-platform-android": "20.0.0",
+    "@react-native-community/cli-platform-ios": "20.0.0",
     "@react-native/babel-preset": "0.81.0-rc.5",
     "@react-native/eslint-config": "0.81.0-rc.5",
     "@react-native/metro-config": "0.81.0-rc.5",
