--- a/template/package.json
+++ b/template/package.json
@@ -26,13 +26,13 @@
     "@react-native/eslint-config": "0.82.0-main",
     "@react-native/metro-config": "0.82.0-main",
     "@react-native/typescript-config": "0.82.0-main",
+    "@testing-library/react-native": "^13.3.3",
     "@types/jest": "^29.5.13",
     "@types/react": "^19.1.1",
     "@types/react-test-renderer": "^19.1.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
-    "react-test-renderer": "19.1.1",
     "typescript": "^5.8.3"
   },
   "engines": {
