Revert "feat: add visionOS"
This reverts commit a36cd88adb4025c911bbb3724b3b93239547dbb3.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@callstack/visionos-template",
+  "name": "@react-native-community/template",
   "version": "0.79.6",
   "description": "The template used by `npx @react-native-community/cli init` to bootstrap a React Native application.",
   "license": "MIT",
@@ -13,8 +13,7 @@
   "type": "commonjs",
   "files": [
     "template/*",
-    "template.config.js",
-    "postInitScript.js"
+    "template.config.js"
   ],
   "dependencies": {},
   "devDependencies": {
