--- a/package.json
+++ b/package.json
@@ -1,29 +1,11 @@
 {
-  "name": "@react-native-community/template",
-  "version": "0.83.0-main",
-  "description": "The template used by `npx @react-native-community/cli init` to bootstrap a React Native application.",
-  "license": "MIT",
-  "publishConfig": {
-    "access": "public"
-  },
+  "private": true,
   "scripts": {
-    "format": "prettier --write .",
     "test": "jest"
   },
-  "type": "commonjs",
-  "files": [
-    "template/*",
-    "template.config.js"
-  ],
   "dependencies": {},
   "devDependencies": {
     "jest": "^29.7.0",
-    "prettier": "^3.6.2",
     "semver": "^7.6.3"
-  },
-  "homepage": "https://github.com/react-native-community/template/tree/main",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/react-native-community/template.git"
   }
 }
