--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "access": "public"
   },
   "scripts": {
+    "format": "prettier --write .",
     "test": "jest"
   },
   "type": "commonjs",
@@ -17,6 +18,7 @@
   "dependencies": {},
   "devDependencies": {
     "jest": "^29.7.0",
+    "prettier": "^3.6.2",
     "semver": "^7.6.3"
   },
   "homepage": "https://github.com/react-native-community/template/tree/main",
