--- a/template/package.json
+++ b/template/package.json
@@ -10,9 +10,9 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native/new-app-screen": "nightly",
     "react": "19.2.0",
     "react-native": "nightly",
-    "@react-native/new-app-screen": "nightly",
     "react-native-safe-area-context": "^5.5.2"
   },
   "devDependencies": {
@@ -29,6 +29,7 @@
     "@types/jest": "^29.5.13",
     "@types/react": "^19.2.0",
     "@types/react-test-renderer": "^19.1.0",
+    "babel-plugin-react-compiler": "^1.0.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
